--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,26 @@
-!*.c   
-!*.h  
-*.log  
-*.plg  
-*.bak  
+#前面不能有空格
+
+#保留的文件
+!*.c
+!*.h
+
+#忽略的文件
+*.log
+*.plg
+*.bak
 *.bat
-*.dep  
-*.uvgui.*  
-JLinkLog.txt  
-*.o  
-*.d  
-*.crf  
-*.tra  
-*.axf  
-*.hex  
-*.lnp  
-*.sct  
-*.__i  
-*.htm 
+*.dep
+*.uvgui.*
+JLinkLog.txt
+*.o
+*.d
+*.crf
+*.tra
+*.axf
+*.hex
+*.lnp
+*.sct
+*.__i
+*.htm
 *.lst
 *.map
